--- a/packages/e-cli/package.json
+++ b/packages/e-cli/package.json
@@ -19,7 +19,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "tsup --watch",
-    "build": "tsup"
+    "build": "tsup",
+    "changelog": "conventional-changelog -p angular -r 0"
   },
   "bin": {
     "e": "./bin/index.js"
@@ -50,6 +51,7 @@
     "conventional-changelog": "^6.0.0",
     "execa": "^9.5.2",
     "fs-extra": "^11.3.0",
+    "hirestime": "^7.0.4",
     "nanospinner": "^1.2.2",
     "prompts": "^2.4.2",
     "semver": "^7.7.1"
