--- a/.prettierignore
+++ b/.prettierignore
@@ -1,10 +1,13 @@
 node_modules
 coverage
+dist
+docs
 
 **/package.json
 *.md
 .github/**
 .history/**
+.cache
 
 pnpm-lock.yaml
 pnpm-workspace.yaml
