--- a/packages/e-logger/package.json
+++ b/packages/e-logger/package.json
@@ -15,6 +15,10 @@
   "files": [
     "dist"
   ],
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.org/"
+  },
   "scripts": {
     "dev": "unbuild --stub",
     "build": "unbuild",
@@ -27,8 +31,8 @@
   },
   "keywords": [
     "e",
-    "cli",
-    "e-cli"
+    "logger",
+    "e-logger"
   ],
   "author": "Appleec <771992522@qq.com>",
   "license": "MIT",
@@ -39,8 +43,5 @@
   "dependencies": {
     "ansis": "^3.17.0",
     "is-unicode-supported": "^2.1.0"
-  },
-  "devDependencies": {
-    "unbuild": "^3.5.0"
   }
 }
