--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,4 @@
-link-workspace-packages = false
-save-workspace-protocol = true
+# https://www.pnpm.cn/npmrc
+link-workspace-packages=true
+save-workspace-protocol=rolling
+save-prefix=
