--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
     "test": "vitest run",
     "test:report": "vitest --ui --coverage",
     "build": "pnpm -r --filter=./packages/* build",
-    "lint": "eslint . --ext \"**/*.{js,jsx,mjs,cjs,ts,tsx}\"",
-    "format": "prettier --list-different \"**/*.{js,ts,tsx,md}\"",
-    "format:fix": "prettier --write \"**/*.{js,ts,tsx,md}\"",
+    "lint": "eslint --ext \"**/*.{js,mjs,cjs,ts}\"",
+    "lint:fix": "pnpm lint --fix",
+    "format": "prettier --ignore-path .prettierignore --check \"**/*.{js,mjs,cjs,ts,md}\"",
+    "format:fix": "pnpm format --write",
     "docs:dev": "pnpm --dir ./docs docs:dev",
     "docs:build": "pnpm -r --filter=./docs run docs:build",
     "docs:preview": "pnpm -r --filter=./docs run docs:preview"
@@ -31,12 +32,14 @@
   },
   "homepage": "https://github.com/Appleec/e#readme",
   "devDependencies": {
-    "@elinzy/e-cli": "workspace:^0.1.1",
+    "@elinzy/e-cli": "workspace:*",
+    "@eslint/js": "9.22.0",
     "@types/node": "^22.13.10",
     "@vitest/coverage-istanbul": "^3.0.8",
     "@vitest/ui": "^3.0.8",
     "ansis": "^3.17.0",
     "eslint": "^9.22.0",
+    "eslint-plugin-n": "17.16.2",
     "execa": "^9.5.2",
     "globals": "^16.0.0",
     "nanospinner": "^1.2.2",
