build(*): 更新项目配置

--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "private": true,
   "main": "index.js",
   "scripts": {
+    "dev": "pnpm -r --filter=./packages/* dev",
+    "build": "pnpm -r --filter=./packages/* build",
     "test": "vitest run",
     "test:report": "vitest --ui --coverage",
-    "build": "pnpm -r --filter=./packages/* build",
     "lint": "eslint --ext \"**/*.{js,mjs,cjs,ts}\"",
     "lint:fix": "pnpm lint --fix",
     "format": "prettier --ignore-path .prettierignore --check \"**/*.{js,mjs,cjs,ts,md}\"",
@@ -38,6 +39,7 @@
     "@vitest/coverage-istanbul": "^3.0.8",
     "@vitest/ui": "^3.0.8",
     "ansis": "^3.17.0",
+    "clean-publish": "5.1.0",
     "eslint": "^9.22.0",
     "eslint-plugin-n": "17.16.2",
     "execa": "^9.5.2",
