--- a/packages/e-core/package.json
+++ b/packages/e-core/package.json
@@ -1,8 +1,21 @@
 {
     "name": "@elinzy/e-core",
-    "version": "0.1.0",
+    "version": "0.2.0",
     "description": "e core implementation module",
-    "main": "./dist/index.js",
+    "type": "module",
+    "main": "./dist/index.cjs",
+    "types": "./dist/index.d.ts",
+    "exports": {
+        ".": {
+            "types": "./dist/index.d.ts",
+            "import": "./dist/index.mjs",
+            "require": "./dist/index.cjs"
+        }
+    },
+    "publishConfig": {
+        "access": "public",
+        "registry": "https://registry.npmjs.org/"
+    },
     "files": [
         "dist"
     ],
