--- a/package.json
+++ b/package.json
@@ -1,57 +1,56 @@
 {
-  "name": "@elinzy/e",
-  "version": "0.1.1",
-  "description": "The collection of e modules",
-  "private": true,
-  "main": "index.js",
-  "scripts": {
-    "dev": "pnpm -r --filter=./packages/* dev",
-    "build": "pnpm -r --filter=./packages/* build",
-    "test": "vitest run",
-    "test:report": "vitest --ui --coverage",
-    "lint": "eslint --ext \"**/*.{js,mjs,cjs,ts}\"",
-    "lint:fix": "pnpm lint --fix",
-    "format": "prettier --ignore-path .prettierignore --check \"**/*.{js,mjs,cjs,ts,md}\"",
-    "format:fix": "pnpm format --write",
-    "docs:dev": "pnpm --dir ./docs docs:dev",
-    "docs:build": "pnpm -r --filter=./docs run docs:build",
-    "docs:preview": "pnpm -r --filter=./docs run docs:preview"
-  },
-  "keywords": [
-    "e",
-    "e-utils",
-    "e-cli"
-  ],
-  "author": "Appleec <771992522@qq.com>",
-  "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "git+ssh://git@github.com/Appleec/e.git"
-  },
-  "bugs": {
-    "url": "https://github.com/Appleec/e/issues"
-  },
-  "homepage": "https://github.com/Appleec/e#readme",
-  "devDependencies": {
-    "@elinzy/e-cli": "workspace:*",
-    "@eslint/js": "9.22.0",
-    "@types/node": "^22.13.10",
-    "@vitest/coverage-istanbul": "^3.0.8",
-    "@vitest/ui": "^3.0.8",
-    "ansis": "^3.17.0",
-    "clean-publish": "5.1.0",
-    "eslint": "^9.22.0",
-    "eslint-plugin-n": "17.16.2",
-    "execa": "^9.5.2",
-    "globals": "^16.0.0",
-    "nanospinner": "^1.2.2",
-    "prettier": "^3.5.3",
-    "prompts": "^2.4.2",
-    "tsx": "^4.19.3",
-    "typescript": "^5.8.2",
-    "typescript-eslint": "^8.26.0",
-    "unbuild": "^3.5.0",
-    "vite": "^6.2.1",
-    "vitest": "^3.0.8"
-  }
+    "name": "@elinzy/e",
+    "version": "0.1.1",
+    "description": "The collection of e modules",
+    "private": true,
+    "main": "index.js",
+    "scripts": {
+        "dev": "pnpm -r --filter=./packages/* dev",
+        "build": "pnpm -r --filter=./packages/* build",
+        "test": "vitest run",
+        "test:report": "vitest --ui --coverage",
+        "lint": "eslint --ext \"**/*.{js,mjs,cjs,ts}\"",
+        "lint:fix": "pnpm lint --fix",
+        "format": "prettier --ignore-path .prettierignore --check \"**/*.{js,mjs,cjs,ts,md}\"",
+        "format:fix": "pnpm format --write",
+        "docs:dev": "pnpm -C docs run docs:dev",
+        "docs:build": "pnpm -C docs run docs:build",
+        "docs:preview": "pnpm -C docs run docs:preview"
+    },
+    "keywords": [
+        "e"
+    ],
+    "author": "Appleec <771992522@qq.com>",
+    "license": "MIT",
+    "repository": {
+        "type": "git",
+        "url": "git+ssh://git@github.com/Appleec/e.git"
+    },
+    "bugs": {
+        "url": "https://github.com/Appleec/e/issues"
+    },
+    "homepage": "https://github.com/Appleec/e#readme",
+    "devDependencies": {
+        "@changesets/cli": "2.29.3",
+        "@elinzy/e-cli": "workspace:*",
+        "@eslint/js": "9.22.0",
+        "@types/node": "^22.13.10",
+        "@vitest/coverage-istanbul": "^3.0.8",
+        "@vitest/ui": "^3.0.8",
+        "ansis": "^3.17.0",
+        "clean-publish": "5.1.0",
+        "eslint": "^9.22.0",
+        "eslint-plugin-n": "17.16.2",
+        "execa": "^9.5.2",
+        "globals": "^16.0.0",
+        "nanospinner": "^1.2.2",
+        "prettier": "^3.5.3",
+        "prompts": "^2.4.2",
+        "tsx": "^4.19.3",
+        "typescript": "^5.8.2",
+        "typescript-eslint": "^8.26.0",
+        "unbuild": "^3.5.0",
+        "vite": "^6.2.1",
+        "vitest": "^3.0.8"
+    }
 }
