--- a/packages/e-logger/package.json
+++ b/packages/e-logger/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@elinzy/e-logger",
-    "version": "0.2.0",
-    "description": "Console log alias",
+    "version": "0.2.1",
+    "description": "Console log alias for e",
     "type": "module",
     "main": "./dist/index.cjs",
     "types": "./dist/index.d.ts",
