--- a/packages/e-utils/package.json
+++ b/packages/e-utils/package.json
@@ -9,9 +9,9 @@
   "type": "module",
   "scripts": {
     "dev": "rollup --watch",
-    "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsx scripts/build.ts",
-    "build:rollup": "rollup -c rollup.config.*",
+    "build:rollup": "rollup -c",
+    "test": "echo \"Error: no test specified\" && exit 1",
     "build:types": "tsc --noEmit",
     "publish": "tsx scripts/publish.ts",
     "release": "tsx scripts/release.ts",
@@ -62,6 +62,7 @@
     "@babel/preset-typescript": "^7.24.7",
     "@changesets/changelog-github": "^0.5.0",
     "@changesets/cli": "^2.27.12",
+    "@elinzy/e-core": "workspace:*",
     "@rollup/plugin-babel": "^6.0.4",
     "@rollup/plugin-node-resolve": "^15.3.0",
     "@rollup/plugin-typescript": "^11.1.6",
