--- a/packages/e-logger/package.json
+++ b/packages/e-logger/package.json
@@ -42,6 +42,8 @@
     "homepage": "https://github.com/Appleec/e#readme",
     "dependencies": {
         "ansis": "^3.17.0",
-        "is-unicode-supported": "^2.1.0"
+        "dedent": "1.6.0",
+        "is-unicode-supported": "^2.1.0",
+        "object-treeify": "5.0.1"
     }
 }
