--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "eslint-plugin-n": "17.16.2",
     "execa": "^9.5.2",
     "globals": "^16.0.0",
+    "jsdom": "^25.0.0",
     "nanospinner": "^1.2.2",
     "prettier": "^3.5.3",
     "prompts": "^2.4.2",
