--- a/packages/e-types/package.json
+++ b/packages/e-types/package.json
@@ -1,13 +1,28 @@
 {
   "name": "@elinzy/e-types",
   "version": "0.1.0",
-  "description": "Common types shared between e modules",
-  "main": "index.js",
+  "description": "Common types shared for e",
+  "type": "module",
+  "main": "./dist/index.cjs",
+  "types": "./dist/index.d.ts",
+  "scripts": {
+    "dev": "rollup --watch",
+    "build": "rollup -c",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.mjs",
+      "require": "./dist/index.cjs"
+    }
+  },
   "files": [
     "dist"
   ],
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.org/"
   },
   "repository": {
     "type": "git",
@@ -16,13 +31,29 @@
   },
   "keywords": [
     "e",
-    "cli",
-    "e-cli"
+    "types",
+    "e-types"
   ],
-  "author": "Appleec <771992522@qq.com>",
+  "author": {
+    "name": "Appleec",
+    "email": "771992522@qq.com"
+  },
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/Appleec/e/issues"
   },
-  "homepage": "https://github.com/Appleec/e#readme"
+  "homepage": "https://github.com/Appleec/e#readme",
+  "devDependencies": {
+    "@babel/core": "7.27.4",
+    "@babel/preset-env": "7.27.2",
+    "@babel/preset-typescript": "7.27.1",
+    "@rollup/plugin-babel": "6.0.4",
+    "@rollup/plugin-node-resolve": "16.0.1",
+    "rollup": "4.41.1",
+    "rollup-plugin-dts": "6.2.1",
+    "rollup-plugin-esbuild": "6.2.1",
+    "rollup-plugin-node-externals": "8.0.0",
+    "tslib": "2.8.1",
+    "typescript": "5.8.3"
+  }
 }
