--- a/packages/e-tsconfig/package.json
+++ b/packages/e-tsconfig/package.json
@@ -1,18 +1,17 @@
 {
   "name": "@elinzy/e-tsconfig",
-  "version": "0.1.1",
+  "version": "0.2.0",
   "description": "TypeScript configuration for e",
+  "type": "module",
   "main": "tsconfig.json",
   "scripts": {
     "dev": "rollup --watch",
     "build": "rollup -c",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "exports": {
-    ".": "./tsconfig.json"
-  },
   "files": [
-    "dist"
+    "dist",
+    "tsconfig?(.*).json"
   ],
   "publishConfig": {
     "access": "public",
@@ -37,13 +36,25 @@
     "url": "https://github.com/Appleec/e/issues"
   },
   "homepage": "https://github.com/Appleec/e#readme",
+  "peerDependencies": {
+    "typescript": "5.x"
+  },
+  "peerDependenciesMeta": {
+    "typescript": {
+      "optional": true
+    }
+  },
   "devDependencies": {
     "@babel/core": "7.27.4",
     "@babel/preset-env": "7.27.2",
     "@babel/preset-typescript": "7.27.1",
+    "@elinzy/e-core": "workspace:*",
+    "@elinzy/e-tsconfig": "workspace:*",
     "@rollup/plugin-babel": "6.0.4",
+    "@rollup/plugin-json": "6.1.0",
     "@rollup/plugin-node-resolve": "16.0.1",
     "rollup": "4.41.1",
+    "rollup-plugin-copy": "3.5.0",
     "rollup-plugin-dts": "6.2.1",
     "rollup-plugin-esbuild": "6.2.1",
     "rollup-plugin-node-externals": "8.0.0",
